Bug 439006 - New account wizard always defaults to account type "Checkings"
Summary: New account wizard always defaults to account type "Checkings"
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-21 19:28 UTC by Thomas Baumgart
Modified: 2021-06-21 19:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2021-06-21 19:28:34 UTC
SUMMARY
If one has selected a credit card account in the accounts view and starts creating a new account, the account type is always checkings.

STEPS TO REPRODUCE
1. Select accounts view
2. Select any account with type not equal to checkings
3. Create new account

OBSERVED RESULT
Account type is checkings

EXPECTED RESULT
Account type should be the one of the selected account in step 2.
Comment 1 Thomas Baumgart 2021-06-21 19:29:31 UTC
Git commit 099f342d54d8967e1d3db1660b869d5a092b12aa by Thomas Baumgart.
Committed on 21/06/2021 at 19:29.
Pushed by tbaumgart into branch '5.1'.

Use account type of current selected account for new ones
FIXED-IN: 5.1.2

M  +1    -0    kmymoney/views/kaccountsview.cpp

https://invent.kde.org/office/kmymoney/commit/099f342d54d8967e1d3db1660b869d5a092b12aa