Use account type of current selected account for new ones

BUG: 439006
FIXED-IN: 5.1.2